--- a/Electron/Windows/Electron/Electron/Electron.vcxproj
+++ b/Electron/Windows/Electron/Electron/Electron.vcxproj
@@ -59,6 +59,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -76,6 +77,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -90,7 +92,9 @@
     <ClInclude Include="..\..\..\..\ProtonTagArray.h" />
     <ClInclude Include="..\..\..\..\ProtonTagDependency.h" />
     <ClInclude Include="..\..\..\OpenGL\defines.h" />
-    <ClInclude Include="..\..\..\OpenGL\glew\glew.h" />
+    <ClInclude Include="..\..\..\OpenGL\glew\GL\glew.h" />
+    <ClInclude Include="..\..\..\OpenGL\glew\GL\glxew.h" />
+    <ClInclude Include="..\..\..\OpenGL\glew\GL\wglew.h" />
     <ClInclude Include="..\..\..\OpenGL\render\camera\camera.h" />
     <ClInclude Include="..\..\..\OpenGL\render\camera\vector3d.h" />
     <ClInclude Include="..\..\..\OpenGL\render\render.h" />
@@ -122,6 +126,7 @@
     <ClCompile Include="..\..\..\..\ProtonTagArray.cpp" />
     <ClCompile Include="..\..\..\..\ProtonTagDependency.cpp" />
     <ClCompile Include="..\..\..\OpenGL\glew\glew.c" />
+    <ClCompile Include="..\..\..\OpenGL\glew\visualinfo.c" />
     <ClCompile Include="..\..\..\OpenGL\render\camera\camera.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\camera\vector3d.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\render.cpp" />
