--- a/Electron/Windows/Electron/Electron/Electron.vcxproj
+++ b/Electron/Windows/Electron/Electron/Electron.vcxproj
@@ -104,11 +104,15 @@
     <ClInclude Include="..\..\..\OpenGL\render\renderables\objects\itmc.h" />
     <ClInclude Include="..\..\..\OpenGL\render\renderables\objects\scen.h" />
     <ClInclude Include="..\..\..\OpenGL\render\renderables\objects\vehi.h" />
+    <ClInclude Include="..\..\..\OpenGL\render\renderables\sky.h" />
     <ClInclude Include="..\..\..\OpenGL\render\shader\shader.h" />
     <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\null.h" />
+    <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\scex.h" />
     <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\schi.h" />
     <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\senv.h" />
+    <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\sgla.h" />
     <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\soso.h" />
+    <ClInclude Include="..\..\..\OpenGL\render\shader\shaders\swat.h" />
     <ClInclude Include="..\..\..\OpenGL\render\texture\bitmaps.h" />
     <ClInclude Include="..\..\..\OpenGL\render\texture\texture.h" />
     <ClInclude Include="..\..\..\OpenGL\tags\ZZTHaloObjectTag.h" />
@@ -136,11 +140,15 @@
     <ClCompile Include="..\..\..\OpenGL\render\renderables\objects\itmc.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\renderables\objects\scen.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\renderables\objects\vehi.cpp" />
+    <ClCompile Include="..\..\..\OpenGL\render\renderables\sky.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\shader\shader.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\null.cpp" />
+    <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\scex.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\schi.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\senv.cpp" />
+    <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\sgla.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\soso.cpp" />
+    <ClCompile Include="..\..\..\OpenGL\render\shader\shaders\swat.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\texture\bitmaps.cpp" />
     <ClCompile Include="..\..\..\OpenGL\render\texture\texture.cpp" />
     <ClCompile Include="Electron.cpp" />
